--- a/PictureAnalysis/app.config
+++ b/PictureAnalysis/app.config
@@ -10,7 +10,7 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
-    <add key="ConnectionString" value="Data Source=172.16.4.204;Initial Catalog=SoonnetSGL;User ID=Lok_Yan;Password=Ly$2013070550$~!~$;Persist Security Info=True; Max Pool Size = 512;"/>
+    <add key="ConnectionString" value="Data Source=172.16.4.204;Initial Catalog=SoonnetSGL;User ID=Lok;Password=Ly$2013070550$;Persist Security Info=True; Max Pool Size = 512;"/>
     <add key="APP_ID:API_KEY:SECRET_KEY" value="16550139:uVciedbCwBE2KvMoGUxMiGCO:e34b8ENUQ53el2G829FCHZRpq2G96jqC"/>
   </appSettings>
 </configuration>
