--- a/MoveImagePath/App.config
+++ b/MoveImagePath/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-    <add key="ConnectionString" value="Data Source=60.248.176.86;Initial Catalog=SoonnetSGL;User ID=Lok_Yan;Password=Ly$2013070550$~!~$;Persist Security Info=True; Max Pool Size = 512;"/>
+    <add key="ConnectionString" value="Data Source=60.248.176.806;Initial Catalog=SoonnetSGL;User ID=Lok;Password=Ly$2013070550;Persist Security Info=True; Max Pool Size = 512;"/>
       <!--<add key="ConnectionString" value="Data Source=172.16.4.204;Initial Catalog=SoonnetSGL;User ID=Lok_Yan;Password=Ly$2013070550$~!~$;Persist Security Info=True; Max Pool Size = 512;"/>-->
       <add key="IPServer" value="ftp://172.16.3.61:21"/>
       <add key="online" value="ftp://192.168.8.220:21"/>
